refactored a lot of code in the publicVM controller, also removed nuget of pagedList and automapper

--- a/DocSearch2.1/Views/Folder/DownloadAllDocuments.cshtml
+++ b/DocSearch2.1/Views/Folder/DownloadAllDocuments.cshtml
@@ -27,7 +27,7 @@
                 @Html.DisplayNameFor(model => model.RefNumber)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FileType)
+                @Html.DisplayNameFor(model => model.FileExtension)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Originator)
@@ -49,7 +49,7 @@
                 @Html.DisplayFor(modelItem => item.RefNumber)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.FileType)
+                @Html.DisplayFor(modelItem => item.FileExtension)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Originator)
