--- a/DocSearch2.1/Views/Admin/_EditTable.cshtml
+++ b/DocSearch2.1/Views/Admin/_EditTable.cshtml
@@ -1,10 +1,8 @@
 ﻿@model IEnumerable<PublicVM>
 
-@using (Html.BeginForm("Edit", "Admin", FormMethod.Post, new { id = "updateListSubmit"}))
+@using (Html.BeginForm("Edit", "Admin", new { publicId = TempData["Folder_Id"] },FormMethod.Post, new { id = "updateListSubmit"}))
 {
     @Html.AntiForgeryToken()
-
-    <input id="search" type="hidden" name="publicId" value="@Model.First().Folder_ID" />
 
     <table class="edit-table table">
         <thead>
